# WeatherstationGui

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  Main.qml  clockmodel.cpp  clockmodel.h  logging.cpp  logging.h  main.cpp  panoramamodel.cpp  panoramamodel.h
dependencies/nlohmann_json/: CMakeLists.txt
doc/: environment_variables.md  weather_station_gui_uml.drawio
examples/: CMakeLists.txt
examples/color_scheme_viewer/: CMakeLists.txt  Main.qml  main.cpp
examples/downloader/: CMakeLists.txt  main.cpp
examples/dynamic_scheme/: CMakeLists.txt  main.cpp
examples/image_extract_colors/: CMakeLists.txt  main.cpp
examples/live_panorama/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
examples/panomax_day_image_data/: CMakeLists.txt  main.cpp
examples/panomax_image/: CMakeLists.txt  main.cpp
examples/panorama_view/: CMakeLists.txt  Main.qml  main.cpp
lib/: CMakeLists.txt
lib/wsgui_core/: CMakeLists.txt  appsettings.h  appsettingsloader.cpp  appsettingsloader.h  colorschemedata.h  colorschemegenerator.cpp  colorschemegenerator.h  downloader.cpp  downloader.h  imagetiles.cpp  imagetiles.h  imagetilesnode.cpp  imagetilesnode.h  loadcolorscheme.cpp  loadcolorscheme.h  logging.cpp  logging.h  qmlimagetilesfileloader.cpp  qmlimagetilesfileloader.h  qmlpanoramaview.cpp  qmlpanoramaview.h  wsguienums.h
lib/wsgui_core/panomax/: dayimagedata.h  dayimagedatadownloader.cpp  dayimagedatadownloader.h  imagedownloader.cpp  imagedownloader.h  panoramaupdater.cpp  panoramaupdater.h
lib/wsgui_quick/: CMakeLists.txt  colorscheme.cpp  colorscheme.h  colorschemeloader.cpp  colorschemeloader.h  imagetilesfileloader.cpp  imagetilesfileloader.h  imagetilesnode.cpp  imagetilesnode.h  logging.cpp  logging.h  panoramaview.cpp  panoramaview.h  wsguiforeign.h
qml/: Main.qml  PanoramaImage.qml  PanoramaView.qml
resources/: resources.qrc
src/: CMakeLists.txt  backgroundimage.cpp  backgroundimage.h  colorschemeprovider.cpp  colorschemeprovider.h  dayinfo.h  dayinfodownloader.cpp  dayinfodownloader.h  displaydata.cpp  downloader.h  homescreendata.cpp  homescreendata.h  imagedownloader.cpp  imagedownloader.h  imageresolution.h  imagesize.h  imagewrapproxymodel.cpp  imagewrapproxymodel.h  indoorclimatedata.cpp  indoorclimatedata.h  indoorclimatedatadisplay.cpp  indoorclimatedatadisplay.h  main.cpp  measurement.h  messagehandler.cpp  messagehandler.h  panomaximage.cpp  panomaximage.h  panomaximagedownloader.cpp  panomaximagedownloader.h  panomaximageinfo.cpp  panomaximageinfo.h  panomaximageprovider.cpp  panomaximageprovider.h  panomaximages.cpp  panomaximages.h  panomaximagesinfo.cpp  panomaximagesinfo.h  panomaximagesize.cpp  panomaximagesize.h  (+19 more)
src/colors/: CMakeLists.txt  colorscheme.cpp  colorscheme.h  colorschemedata.h  colorschemeprovider.h
src/data/: CMakeLists.txt  weatherstationdata.h
src/panomax/: CMakeLists.txt  backgroundimage.h  imagedownloader.h  jsonserializeimageresolution.h  panomax.h
src/qml/: AppearanceSettings.qml  Background.qml  DigitalClock.qml  HomeScreen.qml  Main.qml  NavigationDrawer.qml  PanoramaView.qml  SettingsScreen.qml  ValueControl.qml  WeatherDataScreen.qml  WeatherDataTable.qml  WindControl.qml
src/wsgui/: CMakeLists.txt  adlserializerqstring.h  downloader.cpp  iconprovider.cpp  imagesdirectory.cpp  settings.cpp  settings.h  wsgui_global.h
src/wsgui/colors/: colorscheme.cpp  colorscheme.h  colorschemeprovider.cpp  colorschemeprovider.h
src/wsgui/core/: downloader.cpp  downloader.h  iconprovider.cpp  iconprovider.h  imagesdirectory.cpp  imagesdirectory.h  navigationitem.cpp  navigationitem.h  panoramaimage.cpp  panoramaimage.h  settings.cpp  settings.h
src/wsgui/data/: displaydata.cpp  displaydata.h  homescreendata.cpp  homescreendata.h  indoorclimatedata.h  indoorclimatedatadisplay.cpp  indoorclimatedatadisplay.h  indoorclimatedataset.h  roomclimatedao.h  roomclimatedata.h  sqlitedatabase.cpp  sqlitedatabase.h  sqliteroomclimatedao.cpp  sqliteroomclimatedao.h  sqliteweatherdatadao.cpp  sqliteweatherdatadao.h  weatherdata.h  weatherdatadao.h  weatherdatamodel.cpp  weatherdatamodel.h  weatherstationdata.cpp  weatherstationdata.h  weatherstationdatadisplay.cpp  weatherstationdatadisplay.h
src/wsgui/panomax/: backgroundimage.cpp  backgroundimage.h  dayinfodownloader.cpp  dayinfodownloader.h  imagedownloader.cpp  imagedownloader.h  recentimageinfo.cpp  recentimageinfo.h
